still trying to fix scrolling on iOS, clamped bee pos

--- a/styles/components.css
+++ b/styles/components.css
@@ -11,7 +11,7 @@
     flex: 1 1 auto;
     padding: var(--spacing-default);
     overflow: auto;
-    min-height: 0px;
+    height: 100%;
     -webkit-overflow-scrolling: touch;
   }
 }
